<resources>
    <string name="app_name">AgriFarmer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="weather">Weather</string>
    <string name="crop_history">Crop History</string>
    <string name="home">Home</string>
    <string name="assistant">Assistant</string>
    <string name="account">Account</string>
    <string name="subtitle">Identify the best crop based on Weather and Soil.</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="by_logging_in_you_agree_to_our">By logging in you agree to our</string>
    <string name="terms_and">terms and</string>
    <string name="conditions">conditions</string>
    <string name="and">and</string>
    <string name="privacy_policy">privacy policy</string>
    <string name="todo">todo</string>
    <string name="message">Message</string>
    <string name="ok">OK</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in_to_continue">Sign In to continue</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="new_user">New User ?</string>
    <string name="signup">Signup</string>
    <string name="create_naccount">Create\nAccount</string>
    <string name="enter_fullname">Enter Fullname</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="choose_location">Choose Location</string>
    <string name="next">Next</string>
    <string name="already_registered">Already Registered ?</string>
    <string name="create_npassword">Create\nPassword</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="i_have_a_referral_code">I have a Referral Code</string>
    <string name="enter_referral_code">Enter Referral Code</string>
    <string name="register">Register</string>
    <string name="user_successful_login">Successfully Logged In!</string>
    <string name="try_again">Try Again</string>
    <string name="credential_fail">Please check the entered credentials!</string>
    <string name="my_account">My Account</string>
    <string name="fullname">Full Name</string>
    <string name="user_location">User Location</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_id">Email</string>
    <string name="sign_up_or_login_to_manage_your_account">Sign Up or Login to manage your Account</string>
    <string name="weather_forecast">Weather Forecast</string>
    <string name="help">Help</string>
    <string name="about_us">About Us</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="o">o</string>
    <string name="c">C</string>
    <string name="wind_flow">Wind Flow</string>
    <string name="precipitation">Precipitation</string>
    <string name="humidity">Humidity</string>
    <string name="search_for_crop">Search for Crops</string>
    <string name="kolhapur">Kolhapur</string>
    <string name="sangli">Sangli</string>
    <string name="nashik">Nashik</string>
    <string name="confirmation">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="success_logout">Successfully Logged Out!</string>
    <string name="unknown">Unknown</string>
    <string name="start_fetch">Start Fetch</string>
    <string name="soil_conditions">Soil Conditions</string>
    <string name="soil_description">Healthy plant growth depends on soil nutrients which can be predicted using soil pH.</string>
    <string name="weather_description">Fetch current weather conditions for appropriate prediction of crops.</string>
    <string name="enter_soil_ph">Enter Soil pH</string>
    <string name="start_prediction">Start Prediction</string>
    <string name="error_message">Error : Weather data couldn\'t fetch. Try Again.</string>
    <string name="weather_alerts">Weather Alerts</string>
    <string name="description">Weather Description</string>
    <string name="feature_coming_soon">This feature will be added soon!</string>
    <string name="weather_conditions">Weather Conditions</string>
    <string name="weather_default_value">0.0</string>
    <string name="update">Update</string>
    <string name="suggest_crops">Suggest Crops</string>
    <string name="recent">Recent</string>
    <string name="crop_list_history">Crop List History</string>
    <string name="select_start_date">Select Start Date</string>
    <string name="duration_in_months">Duration in months</string>
    <string name="enter_all_nutrients_values">Enter all nutrients values</string>
    <string name="enter_only_ph">Enter only pH</string>
    <string name="enter_k">Enter K</string>
    <string name="enter_p">Enter P</string>
    <string name="enter_n">Enter N</string>
    <string name="suitable_crops_in_this_area">suitable crops in this area</string>
    <string name="soil_nutrients">Soil Nutrients</string>
    <string name="weather_forecasting">Weather Forecasting</string>
    <string name="processing">Processing</string>
    <string name="show_results">Show Results</string>
    <string name="looks_empty_no_crop_history_found">Looks empty, no crop history found.</string>
    <string name="please_login_to_see_all_your_crops_history">Please login to see all your crops history.</string>
    <string name="process_complete">Processing Complete!</string>
    <string name="network_error">Network Error! Please check network.</string>

    <string-array name="locations">
        <item>Kolhapur</item>
        <item>Nashik</item>
        <item>Sangli</item>
    </string-array>

    <string-array name="duration_in_months">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
</resources>